<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sback"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainLog" >
    <Button
        android:id="@+id/Schedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Display"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/Schedule" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Settings"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:text="@string/Exit" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Exit"
        android:layout_alignLeft="@+id/Display"
        android:layout_marginBottom="20dp"
        android:text="@string/Settings" />

    <Button
        android:id="@+id/Display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Settings"
        android:layout_alignLeft="@+id/Schedule"
        android:layout_marginBottom="25dp"
        android:text="@string/Display" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Logo"
        android:src="@drawable/teach" />
   
    </RelativeLayout>
