<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <TextView 
        android:id="@+id/week"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/week"/>
    
    <TextView 
        android:id="@+id/set"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textSize="30sp"
        android:text="@string/set"/>
         
         
    <Switch
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
        android:textSize="30sp"
        
        android:text="@string/notification" />

</LinearLayout>
